deployements/svc.yaml
---
apiVersion: v1
kind: Service
metadata: 
  name: nginx-svc
spec: 
  selector: 
    app: nginx
  ports: 
    - name: nginx-svc
      port: 80
      targetPort: 80
      protocol: TCP
